# earth616_ontology

./: .gitignore  CLAUDE.md  README.md  RELEASE_NOTES_0.1.4.md  build-development.sh  build-release-enhanced.sh  build-release.sh  llms.txt  merged.ttl  playground_test.json  pyproject.toml
contexts/: README.md  context-workflow.jsonld
contexts-backup/: README.md  context-workflow.jsonld
decisions/: 06-ISSUE_DRIVEN_DEV.md  7-recommended-ontology-metadata.md  75-adopt-cogitarelink-four-layer-model.md  76-separate-index-merged-ontologies.md  77-move-inference-from-owlrl-to-shacl-sparql.md  78-refactor-domain-range-axioms-into-shacl.md  79-switch-documentation-from-widoco-to-pylode.md  80-adopt-jsonld-1.1-as-primary-serialization.md  81-redesign-release-pipeline.md  82-surface-oplax-patterns-via-index-ontology.md  83-use-owl-time-geosparql-for-spatiotemporal-grounding.md  84-oxigraph-uri-structure.md  ADR_TEMPLATE.md  README.md
design/: DUL-view.drawio  Entity-Process-Role.drawio  Resources.md  cogitarelink.md  design_questions.md  design_scheme.md  llm_temporal_relation_imp.ipynb  redesign.md  sc_event.md  sc_ontology.md
llmstxt/: llmstxt.md  profiles.md  pylode.md  pylode_supermodel.md
modules-deprecated/: README.md
patterns/: EventCore.md  EventCore.n3  EventCore.ttl  SemanticTrajectory.ttl  SpatioTemporalExtent.ttl  Template.md
scripts/: build_index.py  build_prof_index.py  build_profile.py  generate_profile_descriptors.py  merge_ontology.py  merged.ttl  run_sparql_query.py  validate_ontology.py  validate_turtle.py
shapes-backup/: DocumentShape-v1.jsonld  (+4 more)
(+330 files in other folders)
