[project]
name = "earth616_ontology"
version = "0.1.2"
description = "Default template for PDM package"
authors = [
    {name = "charlesvardema", email = "cvardema@nd.edu"},
]
dependencies = [
    "rdflib>=7.0.0",
    "pyshacl>=0.26.0",
    "ollama>=0.2.0",
    "openai>=1.30.5",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
